--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -254,6 +254,8 @@ We vergelijken enkele simpele modellen:
 -  welke distributies passen best? (1)
 -  welke random effects moeten we toevoegen? (2)
 
+### Modellen fitten (1)
+
 We fitten vier modellen met verschillende verdelingsassumpties:
 
 1.  Poisson
@@ -268,8 +270,6 @@ Beschouw $Y_{i}$ een observatie $i$ van een aantal broedparen in eenzelfde telci
 $$
 g(\text{E}(Y_{ij})) = \beta_0 + \beta_{1}X_{\text{periode_in_jaar}, i} + \beta_{2}X_{jaar, i} + \beta_{3}X_{regio, i} + \beta_{4}X_{\text{area_prop_sb}, i} + \beta_{4}X_{regio, i} \times X_{\text{area_prop_sb}, i} + b_{1,j}
 $$
-
-### Modellen fitten (1)
 
 ```{r}
 # Save brms models to this path
@@ -502,14 +502,17 @@ hyp_est_df %>%
 ```
 
 
+### Conclusies (1)
+
+Het Poisson model kan de data goed beschrijven. We kijken nu welke random effecten we best toevoegen.
 
 
-
+## Selectie verklarende variabelen
 
 https://mc-stan.org/projpred/articles/projpred.html  
 https://mc-stan.org/projpred/articles/latent.html
 
-```{r}
+```{r, eval=FALSE}
 library(projpred)
 refm_poiss <- get_refmodel(brmpois1, latent = TRUE)
 vs_lat <- cv_varsel(refm_poiss,
