--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -558,7 +558,7 @@ plot(sbp_gelekwik_pois0)
 # 3. Autoregressive per jaar
 sbp_gelekwik_pois2 <- 
   brm(formula = bf(aantal ~ periode_in_jaar + jaar.f + regio*area_prop_sb,
-                   autocor = ~ ar(time = jaar, gr = ar_id, p = 1)),
+                   autocor = ~ ar(time = jaar, gr = ar_id, p = 1, cov = TRUE)),
       data = gele_kwik_df_modAR, 
       family = poisson(), 
       chains = nchains, 
